--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
   'https://connect.facebook.net/en_US/fbevents.js');
   fbq('init', '418001037205765');
   fbq('init', '492131872856992');
+   fbq('init', '2939941292974778');
   fbq('track', 'PageView');
 </script>
 <noscript><img height="1" width="1" style="display:none"
