--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <img class="img-fluid" src="./assetes/img/ultrasecreto.svg">
 
             <!-- Headline -->
-            <h3 class="my-4"><b>6 ingredientes Simples Que Fazem O Corpo Queimar Até 14Kg Em 30 Dias</b></h3>
+            <h3 class="my-4"><b>6 INGREDIENTE SIMPLES QUE FAZEMO CORPO QUEIMAR ATÉ 17KG EM 30 DIAS</b></h3>
 
             <!-- VSL -->
             <div style="position:relative;padding-top:56.25%;"><iframe id="panda-71c33939-32fe-4303-907a-c2ca1cecb96b" src="https://player-vz-91bbbf0b-cb7.tv.pandavideo.com.br/embed/?v=71c33939-32fe-4303-907a-c2ca1cecb96b" style="border:none;position:absolute;top:0;left:0;" allow="accelerometer;gyroscope;autoplay;encrypted-media;picture-in-picture" allowfullscreen=true width="100%" height="100%"></iframe></div>
